# irc2dc

./: AUTHORS  CMakeLists.txt  CONTRIBUTORS  Doxyfile  TODO  config.h.in  configure.in  irc2dc.kdevelop
src/: Makefile.am  config.cpp  config.h  connection.cpp  connection.h  dcclient.cpp  dcclient.h  dcconfig.cpp  dcconfig.h  dcconnection.cpp  dcconnection.h  dctest.cpp  defs.cpp  defs.h  irc2dc.conf.dist  ircclient.cpp  ircclient.h  ircconfig.cpp  ircconfig.h  ircconnection.cpp  ircconnection.h  irctest.cpp  main.cpp  translator.cpp  translator.h
