INCLUDES = 
METASOURCES = AUTO
bin_PROGRAMS = irc2dc
irc2dc_SOURCES = config.cpp connection.cpp dcclient.cpp dcconfig.cpp \
	dcconnection.cpp ircconfig.cpp ircconnection.cpp main.cpp
noinst_HEADERS = config.h connection.h dcclient.h dcconfig.h dcconnection.h \
	ircconfig.h ircconnection.h
noinst_PROGRAMS = dctest
dctest_SOURCES = connection.cpp dcclient.cpp dcconfig.cpp dcconnection.cpp \
	dctest.cpp
